# grd

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: assets.rs  main.rs
src/cmd/: download.rs  install.rs  mod.rs
