[package]
name = "grd"
description = "CLI to install artefacts from a GitHub Release."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
reqwest = "0.12.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typed-builder = "0.18.2"

[dependencies.clap]
version = "4.5.7"
features = ["derive"]

[dependencies.serde]
version = "1.0.203"
features = ["derive"]

[dependencies.tokio]
version = "1.38.0"
features = ["macros", "rt-multi-thread"]
